--- a/Protein_ligand.ipynb
+++ b/Protein_ligand.ipynb
@@ -6,8 +6,7 @@
     "colab": {
       "provenance": [],
       "machine_shape": "hm",
-      "gpuType": "T4",
-      "include_colab_link": true
+      "gpuType": "T4"
     },
     "kernelspec": {
       "display_name": "Julia",
@@ -18,16 +17,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Rohit-Sharma-pharma/MD-simulations/blob/main/Protein_ligand.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -120,10 +109,28 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "oZReYQjmBLbG"
+        "id": "oZReYQjmBLbG",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        },
+        "outputId": "7ae38ee9-99f0-4783-c884-1acf06ea91eb"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "LoadError",
+          "evalue": "UndefVarError: `pip` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+          "traceback": [
+            "UndefVarError: `pip` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+            "",
+            "Stacktrace:",
+            " [1] top-level scope",
+            "\u001b[90m   @\u001b[39m \u001b[90m\u001b[4mIn[1]:3\u001b[24m\u001b[39m"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
